--- a/app/src/main/res/menu/homepage.xml
+++ b/app/src/main/res/menu/homepage.xml
@@ -16,11 +16,15 @@
         android:title="Post a Job" />
     <item
         android:id="@+id/chat"
-        android:icon="@drawable/home"
-        android:title="Chatting" />
+        android:icon="@drawable/chat"
+        android:title="Chats" />
     <item
         android:id="@+id/nav_contact_us"
         android:icon="@drawable/phone1"
+        android:title="Contact Us" />
+    <item
+        android:id="@+id/appLogOut"
+        android:icon="@drawable/logout_1"
         android:title="Contact Us" />
 
 </menu>
