--- a/app/src/main/res/layout/activity_job.xml
+++ b/app/src/main/res/layout/activity_job.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".JobActivity">
+    tools:context=".job.JobActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
