--- a/app/src/main/res/menu/homepage.xml
+++ b/app/src/main/res/menu/homepage.xml
@@ -25,6 +25,6 @@
     <item
         android:id="@+id/appLogOut"
         android:icon="@drawable/logout_1"
-        android:title="Contact Us" />
+        android:title="Log Out" />
 
 </menu>
