--- a/app/src/main/res/drawable/chat_bubble_incoming.xml
+++ b/app/src/main/res/drawable/chat_bubble_incoming.xml
@@ -1,20 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Shadow for triangle -->
     <item>
         <rotate
             android:fromDegrees="-45"
             android:pivotX="0%"
             android:pivotY="0%"
-            android:toDegrees="0" >
-            <shape android:shape="rectangle" >
-                <solid android:color="@color/white" />
+            android:toDegrees="0">
+            <shape android:shape="rectangle">
+                <solid android:color="#20000000" />
+                <size android:width="18dp" android:height="18dp" />
             </shape>
         </rotate>
     </item>
-    <item android:left="8dp">
-        <shape android:shape="rectangle" >
+
+    <!-- Shadow for main bubble -->
+    <item android:left="8dp" android:top="1dp" android:right="1dp" android:bottom="3dp">
+        <shape android:shape="rectangle">
+            <solid android:color="#20000000" />
+            <corners android:radius="12dp" />
+        </shape>
+    </item>
+
+    <!-- Triangle pointer -->
+    <item android:top="1dp" android:left="2dp">
+        <rotate
+            android:fromDegrees="-45"
+            android:pivotX="0%"
+            android:pivotY="0%"
+            android:toDegrees="0">
+            <shape android:shape="rectangle">
+                <solid android:color="@color/white" />
+                <size android:width="16dp" android:height="16dp" />
+            </shape>
+        </rotate>
+    </item>
+
+    <!-- Main bubble body -->
+    <item android:left="10dp" android:top="1dp" android:right="1dp" android:bottom="3dp">
+        <shape android:shape="rectangle">
             <solid android:color="@color/white" />
-            <corners android:radius="10dp" />
+            <corners android:radius="12dp" />
+            <stroke android:color="#E0E0E0" android:width="1dp" />
         </shape>
     </item>
 </layer-list>
