--- a/app/src/main/res/layout/user_itme.xml
+++ b/app/src/main/res/layout/user_itme.xml
@@ -4,57 +4,81 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/_8sdp"
-    android:padding="@dimen/_6sdp"
+    android:padding="@dimen/_10sdp"
     android:background="@drawable/border"
     android:elevation="2dp">
 
-    <!-- Container for content -->
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical">
 
-        <!-- Profile Image (Reduced Size) -->
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image"
-            android:layout_width="@dimen/_35sdp"
-            android:layout_height="@dimen/_35sdp"
+            android:layout_width="@dimen/_45sdp"
+            android:layout_height="@dimen/_45sdp"
             android:src="@drawable/man"
-            android:layout_gravity="center" />
+            android:layout_gravity="center"/>
 
-        <!-- Text Content (Tighter Layout) -->
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginStart="@dimen/_12sdp"
             android:orientation="vertical"
             android:gravity="center_vertical">
 
-            <!-- Title (Smaller Font) -->
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/app_name"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_13ssp"
+                android:textColor="#2C3E50"
+                android:textSize="@dimen/_14ssp"
                 android:fontFamily="@font/robotoslab_semibold"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:layout_marginBottom="@dimen/_2sdp" />
+                android:layout_marginBottom="@dimen/_4sdp"/>
 
-            <!-- Subtitle (Smaller Font and Margin) -->
             <TextView
                 android:id="@+id/subtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#999999"
+                android:textColor="#7F8C8D"
                 android:text="@string/app_name"
-                android:textSize="@dimen/_9ssp"
+                android:textSize="@dimen/_11ssp"
                 android:fontFamily="@font/robotoslab_light"
                 android:ellipsize="end"
-                android:maxLines="2" />
+                android:maxLines="1"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="top|end"
+            android:layout_marginStart="@dimen/_8sdp">
+
+            <TextView
+                android:id="@+id/message_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="10:30 AM"
+                android:textSize="@dimen/_10ssp"
+                android:textColor="#95A5A6"/>
+
+            <TextView
+                android:id="@+id/unread_count"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_4sdp"
+                android:background="@drawable/circle_background"
+                android:gravity="center"
+                android:text="2"
+                android:textColor="#FFFFFF"
+                android:textSize="@dimen/_10ssp"
+                android:visibility="visible"/>
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
