--- a/app/src/main/res/layout/activity_job_detail.xml
+++ b/app/src/main/res/layout/activity_job_detail.xml
@@ -150,6 +150,23 @@
                 android:alpha="0"
                 android:translationY="20dp" />
 
+            <Button
+                android:id="@+id/btn_download_attachment"
+                android:layout_width="match_parent"
+                android:layout_marginBottom="10dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="Download Attachment"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:padding="14dp"
+                android:textColor="#FFFFFF"
+                android:fontFamily="sans-serif-medium"
+                android:background="@drawable/rounded_button"
+                android:stateListAnimator="@animator/button_state_animator"
+                android:alpha="0"
+                android:translationY="20dp" />
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
